<resources>

    <string name="app_name">My Cart</string>
    <string name="purchase_summary">ملخص المصروفات</string>
    <string name="consumption">الأكثر استهلاكاً</string>
    <string name="about_app">عن التطبيق </string>
    <string name="help">مساعدة</string>
    <string name="Settings">الإعدادات</string>
    <string name="add_category">إضافة مجموعة</string>
    <string name="add_element">إضافة عنصر</string>
    <string name="others">أخرى</string>
    <string name="main">الرئيسية</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="category_name"> اسم المجموعة *</string>
    <string name="element_name"> اسم العنصر *</string>
    <string name="element_price"> سعر العنصر *</string>
    <string name="element_quantity"> الكمية *</string>
    <string name="total_price"> إجمالي السعر *</string>
    <string name="total_price1"> إجمالي السعر </string>
    <string name="addElementButton">إضافة لقائمة العناصر</string>
    <string name="UpdateElement">تعديل العنصر</string>
    <string name="UpdateCategoryButton">تعديل المجموعة</string>
    <string name="numOfTimes">عدد مرات الشراء</string>
    <string name="addCategoryButton">إضافة لقائمة المجموعات</string>
    <string name="category_names_isEmpty">* الرجاء اختيار مجموعة</string>
    <string name="category_name_isEmpty">* الرجاء اضافة اسم المجموعة</string>
    <string name="element_name_isEmpty">* الرجاء اضافة اسم العنصر</string>
    <string name="element_price_isEmpty">* الرجاء اضافة سعر العنصر</string>
    <string name="element_quantity_isEmpty">* الرجاء اضافة كمية العنصر</string>
    <string name="added_element_successfully">تم إضافة العنصر بنجاح!</string>
    <string name="update_element_successfully">تم تعديل العنصر بنجاح!</string>
    <string name="added_category_successfully">تم إضافة المجموعة بنجاح!</string>
    <string name="update_category_successfully">تم تعديل المجموعة بنجاح!</string>
    <string name="update_currency_sucessfullr">تم تعديل اسم العملة بنجاح!</string>
    <string name="added_element_error">! حدث خطأ ما في اضافة العنصر </string>
    <string name="not_allowed">عملية غير مسموحة</string>
    <string name="update_element_error">! حدث خطأ ما في تعديل العنصر </string>
    <string name="added_category_error">! حدث خطأ ما في اضافة المجموعة </string>
    <string name="update_category_error">! حدث خطأ ما في تعديل المجموعة </string>
    <string name="delete_category_confirmation">حذف المجموعة يؤدي لحذف العناصر أيضاً،هل أنت متأكد؟ </string>
    <string name="are_you_sure">هل أنت متأكد؟ </string>
    <string name="error">! حدث خطأ ما</string>
    <string name="alert">تحذير !</string>
    <string name="cheapest">حسب الأرخص</string>
    <string name="expensive">حسب الأغلى</string>
    <string name="text_size">حجم النص</string>
    <string name="lock_feature">خاصية القفل</string>
    <string name="activate_lock_feature">تفعيل خاصية القفل</string>
    <string name="activate_lock_feature_successfully"> تم تفعيل خاصية القفل</string>
    <string name="password">كلمة المرور</string>
    <string name="password_error">كلمة المرور غير صحيحة</string>
    <string name="hint">كلمة تذكرك بكلمة المرور</string>
    <string name="enter_password">أدخل كلمة مرور</string>
    <string name="enter_password_error">يرجى إدخال كلمة مرور</string>
    <string name="activate">تفعيل</string>
    <string name="enter">دخول</string>
    <string name="currency">اسم العملة</string>

</resources>
