<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGray">


        <TextView
            android:id="@+id/category_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/category_name"
            android:textColor="@color/text_red_bright_color"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/category_names"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:textDirection="ltr"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/category_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_name_text" />

        <TextView
            android:id="@+id/category_names_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/error"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/category_names"
            app:layout_constraintTop_toBottomOf="@id/category_names" />


        <TextView
            android:id="@+id/element_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/element_name"
            android:textColor="@color/text_red_bright_color"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_names" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/element_name"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shape"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/element_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_name_text" />


        <TextView
            android:id="@+id/element_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/error"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/element_name"
            app:layout_constraintTop_toBottomOf="@id/element_name" />


        <TextView
            android:id="@+id/element_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/element_price"
            android:textColor="@color/text_red_bright_color"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/element_name" />

        <EditText
            android:id="@+id/element_price"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shape"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/element_price_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_price_text" />

        <TextView
            android:id="@+id/element_price_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/error"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/element_price"
            app:layout_constraintTop_toBottomOf="@id/element_price" />


        <TextView
            android:id="@+id/element_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/element_quantity"
            android:textColor="@color/text_red_bright_color"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/element_price" />

        <EditText
            android:id="@+id/element_quantity"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shape"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/element_quantity_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_quantity_text" />

        <TextView
            android:id="@+id/element_quantity_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/error"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/element_quantity"
            app:layout_constraintTop_toBottomOf="@id/element_quantity" />


        <TextView
            android:id="@+id/element_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/total_price"
            android:textColor="@color/text_red_bright_color"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/element_quantity" />

        <TextView
            android:id="@+id/element_total_price"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shape"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/element_total_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_total_text" />

        <TextView
            android:id="@+id/element_total_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/error"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/element_total_price"
            app:layout_constraintTop_toBottomOf="@id/element_total_price" />

        <Button
            android:id="@+id/add_element_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/toolbar"
            android:gravity="center"
            android:text="@string/addElementButton"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/element_total_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>