<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="currency"
            type="com.example.icart.views.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGray">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/back">

                <TextView
                    android:id="@+id/settings_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Settings"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_settings"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_settings_work_tool" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_size"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/topbar">


            <TextView
                android:id="@+id/text_size_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="40dp"
                android:text="@string/text_size"
                android:textColor="@color/toolbar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/text_size_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:isb_indicator_color="@color/toolbar"
                app:isb_indicator_text_color="@color/colorAccent"
                app:isb_indicator_text_size="18sp"
                app:isb_max="30"
                app:isb_min="10"
                app:isb_only_thumb_draggable="false"
                app:isb_progress="20"
                app:isb_seek_smoothly="true"
                app:isb_show_indicator="circular_bubble"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_tick_texts="true"
                app:isb_thumb_color="@android:color/black"
                app:isb_thumb_size="20dp"
                app:isb_tick_marks_drawable="@mipmap/ic_launcher"
                app:isb_tick_marks_size="13dp"
                app:isb_tick_texts_color="@color/toolbar"
                app:isb_tick_texts_size="15sp"
                app:isb_ticks_count="3"
                app:isb_track_background_color="@color/backgroundGray"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_color="@color/toolbar"
                app:isb_track_progress_size="4dp"
                app:layout_constraintBottom_toBottomOf="@id/text_size_text"
                app:layout_constraintEnd_toStartOf="@+id/text_size_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_size_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lockFeature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/text_size">


            <TextView
                android:id="@+id/lock_feature_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="40dp"
                android:text="@string/lock_feature"
                android:textColor="@color/toolbar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.suke.widget.SwitchButton
                android:id="@+id/lock_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:progress="50"
                android:thumbTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@id/lock_feature_text"
                app:layout_constraintEnd_toStartOf="@+id/lock_feature_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/lock_feature_text"
                app:sb_border_width="4dp"
                app:sb_button_color="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/lockFeature">

            <TextView
                android:id="@+id/currency_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="40dp"
                android:text="@string/currency"
                android:textColor="@color/toolbar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/currency_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@color/toolbar"
                android:drawableEnd="@drawable/ic_money"
                android:gravity="center"
                android:text="@{`Currency `+ currency.currency}"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/currency_text"
                app:layout_constraintEnd_toStartOf="@+id/currency_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/currency_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>